@@ -84,6 +84,7 @@ limitations under the License.
         <item name="read_button">@drawable/ic_action_read_light</item>
         <item name="unread_button">@drawable/ic_action_unread_light</item>
         <item name="quote_button">@drawable/ic_action_reply_all_light</item>
+        <item name="check_box">@drawable/twitter_btn_check_holo_light</item>
 
         <item name="themeSettings">@drawable/drawer_theme_light</item>
         <item name="notificationSettings">@drawable/drawer_notifications_light</item>
